core/unpackaged/main/default/objects/ZVC__Zoom_Event_Fields_Mapping__c/ZVC__Zoom_Event_Fields_Mapping__c.object-meta.xml
<CustomObject>
    <label>Zoom Event Fields Mapping</label>
    <nameField>
        <label>ZoomEventFieldMapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Event Fields Mappings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>