core/unpackaged/main/default/objects/ZVC__Zoom_Event_Fields_Mapping__c/fields/ZVC__Custom_Fields_Mappings__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Custom_Fields_Mappings__c</fullName>
    <label>Custom Fields Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>