core/unpackaged/main/default/objects/ZVC__Zoom_Event_Fields_Mapping__c/fields/ZVC__Event_Id__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Event_Id__c</fullName>
    <label>Event Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>