core/unpackaged/main/default/objects/ZVC__Zoom_Event_Fields_Mapping__c/fields/ZVC__Used_Object__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Used_Object__c</fullName>
    <label>Used Object</label>
    <length>200</length>
    <type>Text</type>
</CustomField>